package designpatterns.decorator;

interface Pizza {

    String getDescription();

    double getPrice();
}